# secret-chat-system

./: README.md
client/: Cargo.toml
client/src/: config.rs  main.rs
client/src/network/: client.rs  custom_rsa.rs  errors.rs  mod.rs
client/src/ui/: chat_page.rs  first_page.rs  input.rs  listserver_page.rs  mod.rs
client/src/ui/components/: banner.rs  chat.rs  input.rs  menu.rs  mod.rs  mode.rs
server/: Cargo.toml
server/src/: config.rs  connection.rs  custom_rsa.rs  logger.rs  main.rs  server.rs
server/tests/: integration_tests.rs
